--- a/qtBuildSystem/Mu/mainwindow.ui
+++ b/qtBuildSystem/Mu/mainwindow.ui
@@ -85,7 +85,7 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="buttons">
        <layout class="QGridLayout" name="gridLayout">
@@ -130,7 +130,7 @@
          </widget>
         </item>
         <item row="2" column="1">
-         <widget class="QPushButton" name="phone">
+         <widget class="QPushButton" name="addressBook">
           <property name="sizePolicy">
            <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
             <horstretch>0</horstretch>
@@ -175,7 +175,7 @@
          </widget>
         </item>
         <item row="2" column="0">
-         <widget class="QPushButton" name="clock">
+         <widget class="QPushButton" name="calender">
           <property name="sizePolicy">
            <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
             <horstretch>0</horstretch>
@@ -295,19 +295,6 @@
       <widget class="QWidget" name="misc">
        <layout class="QGridLayout" name="gridLayout_2">
         <item row="0" column="0" colspan="2">
-         <widget class="QPushButton" name="keyboard">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="text">
-           <string>Show Keyboard For Mobile</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="0" colspan="2">
          <widget class="QPushButton" name="install">
           <property name="sizePolicy">
            <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
@@ -320,7 +307,20 @@
           </property>
          </widget>
         </item>
-        <item row="4" column="0" colspan="2">
+        <item row="1" column="0">
+         <widget class="QPushButton" name="settingsLeft">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="text">
+           <string>L</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0" colspan="2">
          <widget class="QPushButton" name="settings">
           <property name="sizePolicy">
            <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
@@ -333,7 +333,7 @@
           </property>
          </widget>
         </item>
-        <item row="2" column="1">
+        <item row="1" column="1">
          <widget class="QPushButton" name="settingsRight">
           <property name="sizePolicy">
            <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
@@ -343,19 +343,6 @@
           </property>
           <property name="text">
            <string>R</string>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="0">
-         <widget class="QPushButton" name="settingsLeft">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="text">
-           <string>L</string>
           </property>
          </widget>
         </item>
