Remove old credits, there all on the front page anyway, buttons now squishable to any size, run/pause and hex editor have icons

--- a/qtBuildSystem/Mu/mainwindow.qrc
+++ b/qtBuildSystem/Mu/mainwindow.qrc
@@ -15,5 +15,6 @@
         <file>images/saveLoad.png</file>
         <file>images/screenshot.png</file>
         <file>images/stop.png</file>
+        <file>images/hexViewer.png</file>
     </qresource>
 </RCC>
