--- a/qtBuildSystem/Mu/mainwindow.ui
+++ b/qtBuildSystem/Mu/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>383</width>
-    <height>433</height>
+    <width>398</width>
+    <height>481</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -45,6 +45,9 @@
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton { padding: 0px; }</string>
+      </property>
       <layout class="QGridLayout" name="gridLayout">
        <item row="6" column="0">
         <widget class="QPushButton" name="calender">
@@ -56,9 +59,6 @@
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
-         </property>
-         <property name="text">
-          <string/>
          </property>
          <property name="icon">
           <iconset resource="mainwindow.qrc">
@@ -77,9 +77,6 @@
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <property name="text">
-          <string/>
-         </property>
          <property name="icon">
           <iconset resource="mainwindow.qrc">
            <normaloff>:/buttons/images/down.png</normaloff>:/buttons/images/down.png</iconset>
@@ -96,9 +93,6 @@
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
-         </property>
-         <property name="text">
-          <string/>
          </property>
          <property name="icon">
           <iconset resource="mainwindow.qrc">
@@ -117,9 +111,6 @@
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <property name="text">
-          <string/>
-         </property>
          <property name="icon">
           <iconset resource="mainwindow.qrc">
            <normaloff>:/buttons/images/addressBook.png</normaloff>:/buttons/images/addressBook.png</iconset>
@@ -137,9 +128,6 @@
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <property name="text">
-          <string/>
-         </property>
          <property name="icon">
           <iconset resource="mainwindow.qrc">
            <normaloff>:/buttons/images/right.png</normaloff>:/buttons/images/right.png</iconset>
@@ -156,9 +144,6 @@
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
-         </property>
-         <property name="text">
-          <string/>
          </property>
          <property name="icon">
           <iconset resource="mainwindow.qrc">
@@ -189,21 +174,9 @@
            <height>0</height>
           </size>
          </property>
-         <property name="text">
-          <string/>
-         </property>
          <property name="icon">
           <iconset resource="mainwindow.qrc">
            <normaloff>:/buttons/images/toDo.png</normaloff>:/buttons/images/toDo.png</iconset>
-         </property>
-         <property name="autoDefault">
-          <bool>false</bool>
-         </property>
-         <property name="default">
-          <bool>false</bool>
-         </property>
-         <property name="flat">
-          <bool>false</bool>
          </property>
         </widget>
        </item>
@@ -217,9 +190,6 @@
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
-         </property>
-         <property name="text">
-          <string/>
          </property>
          <property name="icon">
           <iconset resource="mainwindow.qrc">
@@ -238,9 +208,6 @@
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <property name="text">
-          <string/>
-         </property>
          <property name="icon">
           <iconset resource="mainwindow.qrc">
            <normaloff>:/buttons/images/notes.png</normaloff>:/buttons/images/notes.png</iconset>
@@ -258,9 +225,6 @@
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <property name="text">
-          <string/>
-         </property>
          <property name="icon">
           <iconset resource="mainwindow.qrc">
            <normaloff>:/buttons/images/left.png</normaloff>:/buttons/images/left.png</iconset>
@@ -269,17 +233,14 @@
        </item>
        <item row="1" column="7">
         <widget class="QPushButton" name="ctrlBtn">
-         <property name="enabled">
-          <bool>false</bool>
-         </property>
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <property name="text">
-          <string/>
+         <property name="styleSheet">
+          <string notr="true"/>
          </property>
          <property name="icon">
           <iconset resource="mainwindow.qrc">
@@ -294,9 +255,6 @@
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
-         </property>
-         <property name="text">
-          <string/>
          </property>
          <property name="icon">
           <iconset resource="mainwindow.qrc">
@@ -315,8 +273,9 @@
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <property name="text">
-          <string>HexViewer</string>
+         <property name="icon">
+          <iconset resource="mainwindow.qrc">
+           <normaloff>:/buttons/images/hexViewer.png</normaloff>:/buttons/images/hexViewer.png</iconset>
          </property>
         </widget>
        </item>
